# OpenIL2

./: .appveyor.yml  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.gradle.kts  build.rs  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
classload_agent/: .appveyor.yml  build.gradle.kts
classload_agent/src/main/java/com/maddox/instrument/: ClassLoadAgent.java  SFSTransformer.java
classload_agent/src/main/resources/: Aircraft.patch  Config.patch  FlightModelMain.patch  InOutStreams.patch  InputStreamOfInputStream.patch  Main.patch  RTS.patch  SFSInputStream.patch
installer/: .modload  openil2-debug.iss  openil2.iss
launcher/: Cargo.toml  build.rs
launcher/lib/: physfs.lib
launcher/src/: main.rs
lib/: physfs-static.lib  physfs.exp
physfs_java/: .gitignore  build.gradle.kts
physfs_java/src/main/java/com/maddox/rts/: DummyInputFilter.java  DummyOutputFilter.java  PhysFS.java  PhysFSException.java  PhysFSInputStream.java  PhysFSLoader.java  PhysFSReader.java  PhysFSURLConnection.java  PhysFSURLStreamHandlerProvider.java
physfs_java/src/test/java/com/maddox/rts/: PhysFSTests.java
physfs_java/test-data/: test-files.sfs
physfs_jni/: .appveyor.yml  Cargo.toml  rust-toolchain
physfs_jni/lib/: rts.lib
physfs_jni/src/: lib.rs
physfs_rts/: Cargo.toml
physfs_rts/src/: lib.rs
repacker/: Cargo.toml
repacker/src/: main.rs
sfs/: Cargo.toml
sfs/src/: finger.rs  lib.rs
src/: finger.rs  lib.rs  main.rs
src/main/java/: ClassLoadAgent.java  XorTables.java  XorTransformer.java
src/main/java/com/maddox/instrument/: ClassLoadAgent.java
src/main/java/com/maddox/rts/: PhysFS.java  PhysFSException.java  PhysFSInputStream.java
src/test/java/com/maddox/rts/: PhysFSTests.java
test-data/: test-files2.sfs
