[package]
name = "openil2"
version = "0.1.0"
authors = ["David Gregory <davidgregory084@gmail.com>"]
edition = "2018"
description = "A modernised launcher for IL-2 Sturmovik 1946"
license = "BSD-2-Clause-Patent"

[dependencies]
libc = "0.2.80"
winapi = "0.3.9"
libloading = "0.6.5"
jni = { version = "0.18.0", features = ["invocation"] }
clap = "2.33"
anyhow = "1"
zip = "0.5.9"

[build-dependencies]
bindgen = "0.56.0"
built = "0.4"
vergen = "3"

[profile.release]
opt-level = 1