[package]
name = "physfs_jni"
version = "0.1.0"
authors = ["David Gregory <davidgregory084@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "BSD-2-Clause-Patent"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.80"
winapi = "0.3.9"
jni = "0.18"

[build-dependencies]
bindgen = "0.56.0"
